--- a/css/profielLogIn.css
+++ b/css/profielLogIn.css
@@ -1,85 +1,83 @@
-body{margin:0;
+body {
+    margin: 0;
 }
 
-.hoofddingLogin{
-    color:white;
-    text-align: center;
-    
-}
-
-.loginGegevens{
-    margin-top:5%;
+.hoofddingLogin {
+    color: white;
     text-align: center;
 }
 
-.loginGegevens p{
-    margin-top:5%;
+.loginGegevens {
+    margin-top: 5%;
+    text-align: center;
 }
 
-.loginGegevens input{
-    width:80%;
+.loginGegevens p {
+    margin-top: 5%;
+}
+
+.loginGegevens input {
+    width: 80%;
     border-top: none;
-    border-left:none;
-    border-right:none;
+    border-left: none;
+    border-right: none;
     border-bottom-color: black;
     border-bottom-width: thin;
-    height:5px;
+    height: 5px;
 }
 
-#foto{
-    width:100%;
+#foto {
+    width: 100%;
 }
 
-.socialMediaIcons ul{
-     padding:0;
+.socialMediaIcons ul {
+    padding: 0;
     list-style: none;
     text-align: center;
-    
 }
 
-.socialMediaIcons ul li{
-    margin:3%;
+.socialMediaIcons ul li {
+    margin: 3%;
     display: inline-block;
-    
 }
 
-.socialMediaIcons ul li img{
-    width:40px;
+.socialMediaIcons ul li img {
+    width: 40px;
     height: 40px;
 }
 
-
-#registerHere{
-    margin-top:5%;
+#registerHere {
+    margin-top: 5%;
     text-align: center;
 }
 
-#registerHere a{
+#registerHere a {
     text-decoration: none;
     color: dodgerblue;
 }
 
-#registerHere a:hover{
+#registerHere a:hover {
     text-decoration: underline;
     color: dodgerblue;
 }
 
-.loginHolder{
+.loginHolder {
     text-align: center;
 }
 
-#logIn{
-    padding-left:5%;
-    padding-right:5%;
-    border:1px;
+#logIn {
+    padding-left: 5%;
+    padding-right: 5%;
+    border: 1px;
+    padding-top: 3%;
+    padding-bottom: 3%;
     border-color: black;
-    background-color:dodgerblue;
-    color:white;
-
+    background-color: dodgerblue;
+    color: white;
 }
 
-#fouteLoginGegeven{
-    color:red;
+#fouteLoginGegeven {
+    color: red;
     font-size: 60%;
     text-align: center;
 }
