--- a/css/registerHere.css
+++ b/css/registerHere.css
@@ -38,6 +38,8 @@ body {
     padding-left: 5%;
     padding-right: 5%;
     border: 1px;
+    padding-top: 3%;
+    padding-bottom: 3%;
     border-color: black;
     background-color: dodgerblue;
     color: white;
