--- a/css/home.css
+++ b/css/home.css
@@ -30,12 +30,12 @@
     padding-bottom: 5px;
     border: solid 1px white;
     display: inline-block;
-    color: white;
 }
 
 .nav_jobs {
     border-top-left-radius: 12px;
     border-bottom-left-radius: 12px;
+    color: white;
 }
 
 nav {
@@ -46,6 +46,11 @@ nav {
 .nav_tools{
     border-top-right-radius: 12px;
     border-bottom-right-radius: 12px;
+    color: white;
+}
+
+.nav_events {
+    color: white;
 }
 
 button {
@@ -114,9 +119,11 @@ body {
     padding: 2px 7px 20x 7px;
 }
 #filterbutton3 {
-    width: 10%;
+    width: 15%;
     text-align: center;
     margin: 0;
     padding: 2px 7px 20x 7px;
 }
-
+nav{
+    font-size:1em
+}
