--- a/css/profielLogIn.css
+++ b/css/profielLogIn.css
@@ -72,7 +72,7 @@ body {
     padding-top: 3%;
     padding-bottom: 3%;
     border-color: black;
-    background-color: dodgerblue;
+    background-color: #2980b9;
     color: white;
 }
 
