--- a/css/calendar.css
+++ b/css/calendar.css
@@ -146,7 +146,7 @@ a:hover {
 .week-container {
     padding-top: 1px;
     padding-bottom: 1px;
-    background-color: #42a3e6;
+    background-color: #2980b9;
 }
 
 .week {
