--- a/css/company_event.css
+++ b/css/company_event.css
@@ -58,7 +58,7 @@ a {
   bottom: 0;
   position: absolute;
   margin: 0;
-  color: white;
+  color: black;
   background-repeat: no-repeat;
   padding: 0.5em;
 }
