--- a/css/home.css
+++ b/css/home.css
@@ -1,16 +1,15 @@
 .jaqueslogo {
-    background-color: aqua;
+    background-color: #2980b9;
     width: 200px;
     height: 100px;
     display: block;
     margin: 0 auto;
     margin-top: 10px;
-    margin-bottom: 15px
 }
 
 .topofnav h1 {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 0px;
     color: white;
     padding-bottom: 20px;
     font-size: 2em;
